code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_6.wast
(assert_invalid
  (module
    (func $arity-2-vs-0 (call 1 (f64.const 2) (i32.const 1)))
    (func)
  )
  "type mismatch"
)